<resources>
    <string name="app_name">Tugas6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="list_data">List Data</string>
    <string name="isi_data">Isi Data</string>
    <string name="nim">NIM :</string>
    <string name="nim2">NIM</string>
    <string name="nama">Nama :</string>
    <string name="nama2">Nama</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tempat_lahir2">Tempat Lahir :</string>
    <string name="tanggal_lahir">Tanggal Lahir :</string>
    <string name="tanggal_lahir2">Tanggal Lahir</string>
    <string name="agama">Agama :</string>
    <string name="agama2">Agama</string>
    <string name="jenis_kelamin">Jenis Kelamin :</string>
    <string name="alamat">Alamat :</string>
    <string name="alamat2">Alamat</string>
    <string name="no_telpon">No. Telpon :</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="save">SAVE</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="tambah">Tambah</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="isi_list_mahasiswa">Isi List Mahasiswa</string>
</resources>
