<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/nim"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtNim"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/nim2"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/nama"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtNama"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/nama2"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tempat_lahir2"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtTempatLahir"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/tempat_lahir"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/tanggal_lahir"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtTglLahir"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/tanggal_lahir2"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/agama"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtAgama"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/agama2"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/jenis_kelamin"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtJenisKelamin"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="Jenis Kelamin"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/alamat"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtAlamat"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/alamat2"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearBelow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/no_telpon"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/TxtNoTelp"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/nomor_telepon"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>